--- a/stylesheet.css
+++ b/stylesheet.css
@@ -83,6 +83,32 @@ header {
             display: inline-block;
         }
     }
+
+    /*1366x768*/
+    @media (min-width:320px) and (min-height:526px) {
+        .job-status {
+            position: absolute;
+            top: -4rem;
+            left: 1rem;
+            padding: 0 0.2rem;
+        }
+    }
+
+    @media (min-width:460px) and (min-height:526px) {
+        .job-status {
+            top: -2rem;
+            left: 2rem;
+        }
+    }
+
+    @media (min-width:768px) and (min-height:526px) {
+        .job-status {
+            top: 0rem;
+            left: 6rem;
+            padding: 0rem;
+        }
+    }
+
 }
 
 @keyframes pulse {
@@ -164,6 +190,7 @@ header {
 @media (min-width: 300px) {
     .navbar {
         flex-direction: row;
+        bottom: 2rem;
 
         /* Desktop: menú horizontal */
         & .navbar-content {
@@ -205,8 +232,8 @@ header {
 @media (min-width: 768px) {
     .navbar {
         flex-direction: row;
+        bottom: 4.6875rem;
 
-        /* Desktop: menú horizontal */
         & .navbar-content {
             width: 85%;
 
@@ -226,11 +253,6 @@ header {
     }
 }
 
-@media (min-width: 1024px) {
-    .navbar {}
-}
-
-
 
 .button-cv {
     position: fixed;
@@ -244,6 +266,29 @@ header {
         background-color: var(--Main-color);
         width: 10rem;
         height: 3rem;
+    }
+}
+
+/*1366x768*/
+@media (min-width:320px) and (min-height:526px) {
+    .button-cv {
+        position: fixed;
+        top: 0.95rem;
+        right: 1rem;
+        z-index: 1000;
+    }
+}
+
+@media (min-width:460px) and (min-height:526px) {
+    .button-cv {
+        top: 2.95rem;
+    }
+}
+
+@media (min-width:768px) and (min-height:526px) {
+    .button-cv {
+        top: 4.95rem;
+        right: 4rem;
     }
 }
 
@@ -292,47 +337,138 @@ main {
 
             & .contact-content {
                 display: grid;
-                grid-template-columns: repeat(auto-fit, minmax(min(100%, 300px), 1fr));
-                /* 2 columnas en desktop */
+                grid-template-columns: repeat(2, minmax(0, 1fr));
+                /* 2 columnas fijas */
                 gap: 1rem;
                 width: 60%;
-                padding: 1rem;
+                padding: 1rem 0;
                 margin: 1rem 0;
 
                 & .contact-information {
                     display: flex;
                     gap: 1rem;
                     align-items: center;
-                    & iconify-icon{
+
+                    & iconify-icon {
                         font-size: 2rem;
                         color: var(--Main-color);
                     }
-                    & p, a{
+
+                    & p,
+                    a {
                         font-size: 18px;
                         font-weight: bold;
                         color: var(--text-light);
                     }
                 }
 
-                .email {
-                }
+                .email {}
 
                 .linkedin {
-                    a{
+                    a {
                         text-decoration: none;
                     }
                 }
 
-                .phone {
-                }
+                .phone {}
 
-                .location {
-                }
+                .location {}
             }
-
-
         }
     }
+
+    /*1366x768*/
+    @media (min-width:320px) and (min-height:526px) {
+        .home {
+            padding-bottom: clamp(3rem, 15vh, 15rem);
+
+            & .initial-presentation {
+                width: 90%;
+
+                & .contact-content {
+                    grid-template-columns: 1fr;
+                    width: 100%;
+                }
+            }
+        }
+    }
+
+    @media (min-width:768px) and (min-height:526px) {
+        .home {
+            padding-bottom: clamp(3rem, 30vh, 15rem);
+
+            & .initial-presentation {
+                max-width: 1165px;
+                width: 85%;
+
+                & .contact-content {
+                    grid-template-columns: repeat(2, minmax(0, 1fr));
+                }
+            }
+        }
+    }
+
+    @media (min-width:900px) and (min-height:526px) {
+        .home {
+            & .initial-presentation {
+                & .contact-content {
+                    grid-template-columns: repeat(2, minmax(0, 1fr));
+                    width: 82%;
+                }
+            }
+        }
+    }
+
+
+    /*1920x1080*/
+    @media (min-width:320px) and (min-height:527px) {
+        .home {
+            padding-bottom: clamp(3rem, 25vh, 15rem);
+
+            & .initial-presentation {
+                & .contact-content {
+                    grid-template-columns: 1fr;
+                    width: 100%;
+                }
+            }
+        }
+    }
+
+    @media (min-width:768px) and (min-height:527px) {
+        .home {
+            padding-bottom: clamp(3rem, 30vh, 15rem);
+
+            & .initial-presentation {
+                padding: 0 1rem;
+                max-width: 1165px;
+
+                & .contact-content {
+                    grid-template-columns: repeat(2, minmax(0, 1fr));
+                    width: 90%;
+                }
+            }
+        }
+    }
+
+    @media (min-width:900px) and (min-height:527px) {
+        .home {
+            & .initial-presentation {
+                & .contact-content {
+                    grid-template-columns: repeat(2, minmax(0, 1fr));
+                    width: 75%;
+                }
+            }
+        }
+    }
+
+    @media (min-width:1100px) and (min-height:527px) {
+        .home {
+            & .initial-presentation {
+                max-width: 1400px;
+            }
+        }
+    }
+
 
     .summary {
         background-color: #135aa1;
