--- a/stylesheet.css
+++ b/stylesheet.css
@@ -472,7 +472,7 @@ main {
 
 
 
-
+    /*summary*/
     @media (min-width:320px) {
         .summary {
             padding: 1rem;
@@ -504,7 +504,6 @@ main {
         }
     }
 
-
     @media (min-width:768px) {
         .summary {
             padding: 4rem;
@@ -530,9 +529,153 @@ main {
         }
     }
 
-    .work-experience {
-        background-color: #333;
+
+
+    /*work experience*/
+    @media (min-width:320px) {
+        .work-experience {
+            padding: 4rem 0 2rem 0;
+            backdrop-filter: blur(10px);
+            /* background-color: var(--Icon-color); */
+
+            h2 {
+                padding: 0 1rem;
+                color: var(--Main-color);
+                font-size: 2rem;
+            }
+
+            .timeline-container {
+                position: relative;
+                padding-left: 27px;
+            }
+
+            .timeline-line {
+                position: absolute;
+                left: 16px;
+                top: 24px;
+                bottom: 0;
+                width: 2px;
+                background: linear-gradient(to bottom,
+                        #e0e0e0 0%,
+                        /* Color sólido arriba */
+                        #e0e0e0 80%,
+                        /* Mantiene color hasta el 80% */
+                        rgba(224, 224, 224, 0) 100%
+                        /* Transparencia completa al final */
+                    );
+            }
+
+            .experience-item {
+                position: relative;
+                margin-bottom: 40px;
+            }
+
+            .experience-item::before {
+                content: '';
+                position: absolute;
+                left: -16px;
+                top: 24px;
+                width: 12px;
+                height: 12px;
+                border-radius: 50%;
+                background-color: var(--Main-color);
+                z-index: 2;
+            }
+
+            .experience-item {
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+                padding: 1rem;
+
+                .experience-header {
+
+                    .experience-title-date {
+                        display: flex;
+                        justify-content: space-between;
+
+                        h3 {
+                            color: var(--Main-color);
+                        }
+
+                        p {
+                            color: var(--text-light);
+                        }
+                    }
+
+                    .experience-company {
+                        p {
+                            color: var(--Main-color);
+                            font-size: 0.875rem;
+                        }
+                    }
+                }
+
+                .experience-content {
+                    display: flex;
+                    flex-direction: column;
+                    gap: 1rem;
+
+                    .experience-description {
+                        color: var(--text-light);
+                    }
+
+                    .projects-links {
+                        h4 {
+                            color: var(--Main-color);
+                        }
+                    }
+
+                    .experience-tasks {
+
+                        h4 {
+                            color: var(--Main-color);
+                        }
+
+                        ul {
+                            padding-left: 0.75rem;
+
+                            li {
+                                list-style-type: "—";
+                                color: var(--text-light);
+                                font-size: 0.875rem;
+                                padding-left: 0.5rem;
+                            }
+
+                            li::marker {
+                                color: var(--Main-color);
+                                font-size: 0.65rem;
+                            }
+
+                        }
+                    }
+
+
+                }
+            }
+        }
     }
+
+    @media (min-width:768px) {
+         .work-experience {
+            padding: 4rem;
+        }
+    }
+
+    @media (min-width:900px) {
+        .work-experience {
+            display: grid;
+            grid-template-columns: 1fr;
+            /* El contenido interno ocupa 1fr */
+            justify-content: start;
+            /* Alinea el contenido a la izquierda */
+        }
+
+        .experience-item {
+            max-width: 600px;
+        }
+    }
+
 
     .skills {
         background-color: #672b8f;
