--- a/stylesheet.css
+++ b/stylesheet.css
@@ -747,6 +747,7 @@ main {
             /* === Styles for Languages === */
             .languages {
                 padding: 2rem 0rem;
+
                 .language-item {
                     display: flex;
                     align-items: center;
@@ -863,9 +864,88 @@ main {
         }
     }
 
-    .contact-section {
-        background-color: #333;
+    /*Contact*/
+    @media (min-width:320px) {
+        .contact-section {
+            padding: 2rem 1rem;
+            backdrop-filter: blur(10px);
+            display: flex;
+            flex-direction: column;
+            /* justify-content: center; */
+            gap: 2rem;
+
+            h2 {
+                color: var(--Main-color);
+                font-size: 2rem;
+            }
+
+            /* Redes Sociales */
+            .social-links {
+                display: flex;
+                flex-wrap: wrap;
+                gap: 1.5rem;
+
+                .social-icon {
+                    transition: transform 0.3s, color 0.3s;
+                }
+
+                .social-icon:hover {
+                    transform: scale(1.1);
+                }
+            }
+
+            /* Información de Contacto */
+            .contact-info {
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+
+                .contact-information {
+                    display: flex;
+                    align-items: center;
+                    gap: 0.5rem;
+
+                    iconify-icon {
+                        color: var(--Main-color);
+                        font-size: 1.5rem;
+                    }
+
+                    p {
+                        color: var(--text-light);
+                        font-size: 1rem;
+                    }
+                }
+            }
+
+            /* Copyright */
+            .copyright {
+                color: var(--text-light);
+                opacity: 0.7;
+                font-size: 0.875rem;
+
+                strong {
+                    color: var(--Main-color);
+                }
+            }
+        }
     }
+
+    @media (min-width:768px){
+        .contact-section{
+            padding: 4rem;
+            gap: 6rem;
+        }
+    }
+
+    @media (min-width:900px){
+        .contact-section{
+            .contact-info{
+                flex-direction: row;
+                gap: 2rem;
+            }
+        }
+    }
+
 }
 
 footer {
