--- a/stylesheet.css
+++ b/stylesheet.css
@@ -538,32 +538,29 @@ main {
         .work-experience {
             padding: 4rem 0 2rem 0;
 
-            /* h2 {
-                padding: 0 1rem;
-                color: var(--Main-color);
-                font-size: 2rem;
-            } */
-
             .tabs {
                 display: flex;
+                flex-wrap: wrap;
                 gap: 1rem;
                 margin: 2rem 0;
+                padding: 0 1rem;
                 color: var(--Main-color);
 
                 .tab-button {
-                    padding: 0.75rem 2rem;
+                    /* padding: 0.75rem 2rem; */
                     border: none;
-                    border-radius: 2rem;
-                    background-color: rgba(255, 255, 255, 0.1);
-                    color: var(--text-light);
+                    background-color: transparent;
                     cursor: pointer;
                     font-weight: bold;
                     transition: background-color 0.3s;
+                    font-size: 2rem;
+                    margin: 0;
                 }
 
                 .tab-button.active {
-                    background-color: var(--Main-color);
-                    color: #000;
+                    background-color: transparent;
+                    color: var(--Main-color);
+                    
                 }
             }
 
