--- a/stylesheet.css
+++ b/stylesheet.css
@@ -6,17 +6,14 @@
 }
 
 :root {
-    /* Variables de color (modifica estos valores) */
     --primary-color: #3498db;
     --secondary-color: #2ecc71;
     --dark-color: #2c3e50;
     --light-color: #ecf0f1;
     --text-color: #333;
     --text-light: #fff;
-
     --Main-color: #FFB800;
     --Icon-color: #000000;
-
 
     /* Variables tipográficas */
     --font-main: 'Roboto', sans-serif;
@@ -29,15 +26,9 @@
 }
 
 html {
-    /*scroll-behavior: smooth;*/
-    /* Scroll suave */
     font-size: 16px;
-    /* Base para rem */
-
     height: 100%;
-    /* Ocupa el 100% del viewport height */
     min-height: 100vh;
-    /* Alternativa moderna con vh (viewport height) */
     margin: 0;
     padding: 0;
 }
@@ -128,6 +119,7 @@ header {
     }
 }
 
+/*navbar*/
 .navbar {
     position: fixed;
     bottom: 4.6875rem;
@@ -192,7 +184,6 @@ header {
         flex-direction: row;
         bottom: 2rem;
 
-        /* Desktop: menú horizontal */
         & .navbar-content {
             width: 95%;
 
@@ -216,7 +207,6 @@ header {
     .navbar {
         flex-direction: row;
 
-        /* Desktop: menú horizontal */
         & .navbar-content {
             width: 90%;
 
@@ -253,7 +243,7 @@ header {
     }
 }
 
-
+/*button cv float*/
 .button-cv {
     position: fixed;
     top: 4.6875rem;
@@ -269,7 +259,7 @@ header {
     }
 }
 
-/*1366x768*/
+/*button cv float 1366x768*/
 @media (min-width:320px) and (min-height:526px) {
     .button-cv {
         position: fixed;
@@ -292,6 +282,7 @@ header {
     }
 }
 
+/*section main*/
 main {
     position: relative;
     background: url(./img/Image-primary.jpg) no-repeat center center/cover;
@@ -305,92 +296,61 @@ main {
         z-index: 2;
     }
 
-    .home {
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-        padding-bottom: clamp(3rem, 30vh, 15rem);
-        height: 100vh;
-        /* 
-       - Nunca menos de 3rem (en móviles)
-       - Ideal: 30% del alto de la pantalla (30vh)
-       - Nunca más de 15rem (en pantallas grandes)
-        */
-
-        .initial-presentation {
-            max-width: 1400px;
-            width: 100%;
-            margin: 0 auto;
-
-            & h3 {
-                color: var(--Main-color);
-            }
-
-            & h1 {
-                color: var(--text-light);
-                font-size: clamp(1.5rem, min(4vw + 1rem, 6vh), 4rem);
-                /* 
-                - Mínimo: 1.5rem (24px) → Para móviles.
-                - Ideal: El MENOR valor entre:
-                - 4% del ancho de la pantalla + 1rem (fluido en desktop).
-                - 6% del alto de la pantalla (limita el crecimiento en pantallas cortas).
-                - Máximo: 4rem (64px) → Para desktop grandes.
-                */
-            }
-
-            & .contact-content {
-                display: grid;
-                grid-template-columns: repeat(2, minmax(0, 1fr));
-                /* 2 columnas fijas */
-                gap: 1rem;
-                width: 60%;
-                padding: 1rem 0;
-                margin: 1rem 0;
-
-                & .contact-information {
-                    display: flex;
-                    gap: 1rem;
-                    align-items: center;
-
-                    & iconify-icon {
-                        font-size: 2rem;
-                        color: var(--Main-color);
-                    }
-
-                    & p,
-                    a {
-                        font-size: 18px;
-                        font-weight: bold;
-                        color: var(--text-light);
-                    }
-                }
-
-                .email {}
-
-                .linkedin {
-                    a {
-                        text-decoration: none;
-                    }
-                }
-
-                .phone {}
-
-                .location {}
-            }
-        }
-    }
-
-    /*1366x768*/
+    /*home 1366x768*/
     @media (min-width:320px) and (min-height:526px) {
         .home {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
             padding-bottom: clamp(3rem, 15vh, 15rem);
+            height: 100vh;
 
-            & .initial-presentation {
+            .initial-presentation {
+                max-width: 1400px;
                 width: 90%;
+                margin: 0 auto;
+
+                & h3 {
+                    color: var(--Main-color);
+                }
+
+                & h1 {
+                    color: var(--text-light);
+                    font-size: clamp(1.5rem, min(4vw + 1rem, 6vh), 4rem);
+                }
 
                 & .contact-content {
+                    display: grid;
+                    gap: 1rem;
+                    width: 60%;
+                    padding: 1rem 0;
+                    margin: 1rem 0;
                     grid-template-columns: 1fr;
                     width: 100%;
+
+                    & .contact-information {
+                        display: flex;
+                        gap: 1rem;
+                        align-items: center;
+
+                        & iconify-icon {
+                            font-size: 2rem;
+                            color: var(--Main-color);
+                        }
+
+                        & p,
+                        a {
+                            font-size: 18px;
+                            font-weight: bold;
+                            color: var(--text-light);
+                        }
+                    }
+
+                    .linkedin {
+                        a {
+                            text-decoration: none;
+                        }
+                    }
                 }
             }
         }
@@ -422,8 +382,7 @@ main {
         }
     }
 
-
-    /*1920x1080*/
+    /*home 1920x1080*/
     @media (min-width:320px) and (min-height:527px) {
         .home {
             padding-bottom: clamp(3rem, 25vh, 15rem);
@@ -458,7 +417,7 @@ main {
             & .initial-presentation {
                 & .contact-content {
                     grid-template-columns: repeat(2, minmax(0, 1fr));
-                    width: 75%;
+                    /* width: 75%; */
                 }
             }
         }
@@ -471,8 +430,6 @@ main {
             }
         }
     }
-
-
 
     /*summary*/
     @media (min-width:320px) {
@@ -532,7 +489,6 @@ main {
         }
     }
 
-
     /*work experience*/
     @media (min-width:320px) {
         .work-experience {
@@ -560,7 +516,7 @@ main {
                 .tab-button.active {
                     background-color: transparent;
                     color: var(--Main-color);
-                    
+
                 }
             }
 
@@ -797,16 +753,13 @@ main {
         .work-experience {
             display: grid;
             grid-template-columns: 1fr;
-            /* El contenido interno ocupa 1fr */
             justify-content: start;
-            /* Alinea el contenido a la izquierda */
         }
 
         .experience-item {
             max-width: 600px;
         }
     }
-
 
     /*Skills*/
     @media (min-width:320px) {
@@ -1093,32 +1046,24 @@ main::after {
 }
 
 /*animacion de aparicion con scroll*/
-/*en uso*/
 .fade-in {
-  opacity: 0;
-  transform: translateY(30px);
-  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+    opacity: 0;
+    transform: translateY(30px);
+    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
 }
 
 .fade-in.visible {
-  opacity: 1;
-  transform: translateY(0);
+    opacity: 1;
+    transform: translateY(0);
 }
 
-/*prueba*/
 .fade-in-left {
-  opacity: 0;
-  transform: translateX(-30px);
-  transition: all 0.6s ease-out;
+    opacity: 0;
+    transform: translateX(-30px);
+    transition: all 0.6s ease-out;
 }
 
 .fade-in-left.visible {
-  opacity: 1;
-  transform: translateX(0);
-}
-
-
-footer {
-    display: none;
-    background-color: #8f8d8d;
+    opacity: 1;
+    transform: translateX(0);
 }
