--- a/stylesheet.css
+++ b/stylesheet.css
@@ -250,13 +250,57 @@ header {
     right: 8rem;
     z-index: 1000;
 
-    button {
-        border-radius: 2rem;
-        border: none;
-        background-color: var(--Main-color);
-        width: 10rem;
-        height: 3rem;
+    & .download-link {
+        text-decoration: none;
+        display: inline-block;
+
+       & .animated-download {
+            position: relative;
+            overflow: hidden;
+            height: 3rem;
+            width: 10rem;
+            border-radius: 2rem;
+            background-color: var(--Main-color);
+            color: black;
+            font-weight: bold;
+            cursor: pointer;
+            border: none;
+
+           & span {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                height: 100%;
+                width: 100%;
+                transition: transform 0.3s ease, background-color 0.3s ease;
+                position: absolute;
+                left: 0;
+            }
+
+           & .text {
+                top: 0;
+                transform: translateY(0);
+            }
+
+           & .icon {
+                top: -100%;
+                transform: translateY(0);
+                font-size: 1.5rem;
+            }
+
+            &:hover .text {
+                transform: translateY(100%);
+                background-color: var(--text-light);
+            }
+
+            &:hover .icon {
+                transform: translateY(100%);
+                background-color: var(--text-light);
+            }
+        }
     }
+
+
 }
 
 /*button cv float 1366x768*/
@@ -281,6 +325,8 @@ header {
         right: 4rem;
     }
 }
+
+
 
 /*section main*/
 main {
